# FDA

./: .gitignore  .pre-commit-config.yaml  Makefile  create_script.sql  pyproject.toml  readme.md  transform.py
.github/ISSUE_TEMPLATE/: issue-template.md  task_template.md
config/base/: .user.yml  profiles.yml
containers/postgres/: docker-compose.yml
fdadata/: create_script.sql
fdadata/fda_data_tran/: dbt_project.yml
fdadata/fda_data_tran/models/bronze/: stg_drug_ndc.sql
fdadata/ingestion/: faers_downloader.py  load.py
fdadata/transformations/: dbt_project.yml
fdadata/transformations/models/: unit_tests.yml
fdadata/transformations/models/bronze/: stg_drug_ndc.sql  stg_drug_ndc.yml
fdadata/transformations/models/gold/: labeler_summary.sql  labeler_summary.yml
fdadata/transformations/models/marts/: labelers.sql  labelers.yml
fdadata/transformations/models/silver/: drug_active_ingredients.sql  drug_active_ingredients.yml  drug_labeler.sql  drug_labeler.yml  drug_manufacturer.sql  drug_manufacturer.yml  generic_drug_ids.sql  generic_drug_ids.yml
fdadata/transformations/models/staging/: stg_fda__ndc.yml
fdadata/transformations/sources/: fda.yml
fdadata/transformations/tests/: assert_every_labeler_has_at_least_one_drug_assigned.sql
notebooks/: drug-event-0030-of-0030.ipynb  drug_ndc_exploration.ipynb
scripts/: Makefile  load_env.sh
