[tool.poetry]
name = "fdadata"
version = "0.1.0"
description = "Project to work on dbt test"
authors = ["Piotr Mierzejewski"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
psycopg2-binary = "^2.9.10"
dbt = "^1.0.0.38.22"
dbt-core = "^1.9.1"
dbt-postgres = "^1.9.0"
python-dotenv = "^1.0.1"
ruff = "^0.9.1"
sqlfluff = "^3.3.0"
pre-commit = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
